Thu May 10 10:06:57 2001  Carlos O'Ryan  <coryan@uci.edu>

        * tests/tests.dsw:
        * tests/ARGV_Test.dsp:
          Add project file for ARGV_Test, thanks to Cristian Ferretti
          <cristian_ferretti@yahoo.com> for pointing this out.

Thu May 10 06:36:08 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

        * tests/CDR_File_Test.cpp: Fixed a compile error with g++.

Thu May 10 08:13:12 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * tests/Makefile.bor
        * tests/Misc/Makefile.bor
        * tests/Naming/Makefile.bor
        * tests/Reactor/Makefile.bor
        * tests/Reactor/Dgram/Makefile.bor
        * tests/Reactor/Ntalker/Makefile.bor
        * tests/Registry/Makefile.bor
        * tests/Synch/Makefile.bor

          Added or updated the above BCB makefiles so that the tests are
          build with BCB

Wed May  9 23:19:30 2001  Sharath R. Cholleti  <sharath@cs.wustl.edu>

        * ace/CDR_Streams.h:
        * ace/CDR_Streams.cpp:
        * ace/CDR_Streams.i:
        * ace/CDR_Base.h: Changed the WChar implementation to suit GIOP
          1.2.

        * tests/CDR_Test.cpp:Added test for wchar.

          Thanks to Bala (bala@cs.wustl.edu) for helping me out.

Wed May  9 16:06:34 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

        * ace/TTY_IO.cpp (control):
        * ace/OS.h: Corrected this change "Wed May  9 14:03:01 2001
          Douglas C. Schmidt". The problem was with the definition of the
          macro ACE_VTIME. Looks more like a cut and paste error.

Wed May  9 16:00:22 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

        * ace/OS.h:
        * ace/TTY_IO.cpp: Reverted this change "Wed May  9 14:03:01 2001
          Douglas C. Schmidt".

Wed May  9 14:03:01 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ace/TTY_IO.cpp (control): Use the new ACE_VMIN and ACE_VTIME
          macros.  Thanks to Hans Utz <hans.utz@informatik.uni-ulm.de> for
          suggesting this.
